packages/server/k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: net42
  namespace: staging
  labels:
    app: gateway
spec:
  ports:
    - port: 3333
      targetPort: 3333
  type: NodePort
  selector:
    app: net42
