packages/server/k8s/ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: net42
  namespace: staging
spec:
  ingressClassName: "nginx"
  rules:
    - host: staging-api.net42.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: net42
                port:
                  number: 3333
